<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ebebeb"
    android:orientation="vertical">

    <com.example.rollcall.Topbar
        android:id="@+id/topbar_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000"
        app:leftBackground="@drawable/leftselecter"
        app:titleText="注册用户"
        app:titleTextColor="#FFF"
        app:titleTextSize="10sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />
    
    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_account"
            android:textSize="18dp"
             />

        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:textColor="@color/gray"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Register_Edit"
            android:textColor="@color/gray"
             android:inputType="textPassword"
            android:hint="@string/login_password_hint" />
    </LinearLayout>

    <LinearLayout 
        style="@style/Register_Input" >

        <TextView
            style="@style/Black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_email"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_email"
            style="@style/Register_Edit"
             android:inputType="textPassword"
            android:textColor="@color/gray"
            android:hint="@string/login_email_hint" />
    </LinearLayout>
    <LinearLayout
        style="@style/Register_Input" >

        <TextView
            style="@style/Black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="学校"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_school"
            style="@style/Register_Edit"
            android:textColor="@color/gray"
            android:hint="请输入您的学校名称" />
    </LinearLayout>
    <LinearLayout
        style="@style/Register_Input" >

        <TextView
            style="@style/Black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="职工号"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_workNum"
            style="@style/Register_Edit"
            android:textColor="@color/gray"
            android:hint="请输入您的职工号" />
    </LinearLayout>

    <LinearLayout
        style="@style/Register_Input" >

        <TextView
            style="@style/Black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="姓名"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_relName"
            style="@style/Register_Edit"
            android:textColor="@color/gray"
            android:hint="请输入您的真实姓名" />
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >
    </LinearLayout>
    <TextView
        android:id="@+id/chooseCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="left"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/classlist_title"
        android:text="	选择授课课程"
        android:background="@drawable/button"
        android:textColor="@color/black"
        android:textSize="20sp"
        />
    <ListView
        android:id="@+id/lv_chooseCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>